[project]
name = "spiceauth"
version = "0.1.0"
description = "Relationship-Based Access Control (ReBAC) engine for Python."
authors = [
    {name = "amrahhh", email = "bagirovemrah97@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "sqla-async-orm-queries>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "aiosqlite>=0.19.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
